<resources>
    <string name="app_name">ZohoTask</string>
    <string name="weather_app">Zoho Weather App</string>
    <string name="today">Today</string>
    <string name="test">Kriti Sanon penned a note after winning the Filmfare Award for Best Actress
    Kriti Sanon penned a note after winning the Filmfare Award for Best Actress
        Kriti Sanon penned a note after winning the Filmfare Award for Best Actress
        Kriti Sanon penned a note after winning the Filmfare Award for Best Actress
    </string>

    <string name="read_more">....Read more</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="author">Aravindkumar Raj</string>
    <string name="weather">Weather</string>
    <string name="home">Home</string>
    <string name="news_detail">News detail</string>
    <string name="grant_permission">You need to grant permission to access location</string>
    <string name="failed_getlocation">Failed on getting current location</string>
    <string name="wind">wind</string>
    <string name="cloud">Cloud</string>
    <string name="open_website">Open website</string>

</resources>